--- a/index.html
+++ b/index.html
@@ -46,5 +46,32 @@
             <div><button>Me siento con suerte</button></div>
         </section>
     </main>
+    <footer>
+        <ul class="footer-left">
+            <li>
+                <a href="">Publicidad</a>
+            </li>
+            <li>
+                <a href="">Negocios</a>
+            </li>
+            <li>
+                <a href="">Sobre Google</a>
+            </li>
+            <li>
+                <a href="">Cómo funciona la Busqueda</a>
+            </li>
+        </ul>
+        <ul class="footer-right">
+            <li>
+                <a href="">Privacidad</a>
+            </li>
+            <li>
+                <a href="">Condiciones</a>
+            </li>
+            <li>
+                <a href="">Preferencias</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
