--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="icon-lupa">
                 </span>
                 <input type="text">
-                <a class="icon-micro" href=""></a>
+                <a class="icon-micro" href="" title="Busqueda por Voz"></a>
             </div>
         </section>
         <section class="main-buttons">
